- add file translate nodejs(js) - change the structure of folder

--- a/file-translation-demo/nodejs-js/package.json
+++ b/file-translation-demo/nodejs-js/package.json
@@ -6,15 +6,16 @@
   "author": "",
   "license": "UNLICENSED",
   "scripts": {
-    "auth-signature": "node auth-signature.js",
-    "file-translate-result": "node file-translate-result.js",
     "file-translate": "node file-translate.js",
+    "file-translate-result": "node file-translate-result.js",
+    "file-translate-download": "node file-translate-download.js",
     "lint": "eslint --ext .js --ext .jsx client"
   },
   "dependencies": {
     "form-data": "^2.5.0",
     "superagent": "^5.1.0",
-    "ws": "^7.1.2"
+    "ws": "^7.1.2",
+    "unzipper": "^0.10.10"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
